--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         </activity>
 
         <activity android:name=".viewpager.TXVpDemoActivity" />
+        <activity android:name=".calender.TXCalenderDemoActivity" />
+        <activity android:name=".calender.TXCalenderListDemoActivity" />
+        <activity android:name=".calender.demo.TXCalendarPickerActivity" />
     </application>
 
 </manifest>
