--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.cc.app"
-        minSdkVersion 10
+        minSdkVersion 11
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -24,5 +24,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile "com.android.support:cardview-v7:25.0.0"
+    compile 'com.android.support:recyclerview-v7:25.0.0'
     compile "com.android.support.constraint:constraint-layout:1.0.2"
+
+    compile(name: "library-debug", ext: 'aar') {
+        transitive = true
+    }
 }
